--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header></header>
+    <header class="cabecalho">
+        <nav class="cabecalho__menu">
+            <a class="cabecalho__menu__link" href="">Home</a>
+            <a class="cabecalho__menu__link" href="">Sobre mim</a>
+        </nav>
+    </header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong class="titulo-destaque"> com um Front-end de qualidade!</strong></h1>
@@ -35,6 +40,8 @@
         </section>
         <img class="apresentacao__foto" src="./assets/Lucinhas.png" alt="Foto do Programador Lucas Campos">
     </main>
-    <footer></footer>
+    <footer class="rodape">
+        <p>Desenvolvido por Lucas Campos.</p>
+    </footer>
 </body>
 </html>
