--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
     <header class="cabecalho">
         <nav class="cabecalho__menu">
-            <a class="cabecalho__menu__link" href="">Home</a>
-            <a class="cabecalho__menu__link" href="">Sobre mim</a>
+            <a class="cabecalho__menu__link" href="index.html">Home</a>
+            <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
         </nav>
     </header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong class="titulo-destaque"> com um Front-end de qualidade!</strong></h1>
-            <p class="apresentacao__conteudo__paragrafo">Olá! Sou Lucas Campos, desenvolvedor Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+            <p class="apresentacao__conteudo__paragrafo">Olá! Sou Lucas Campos, desenvolvedor Front-end com especialidade em JavaScript, HTML e CSS e Back-end com especialidade em Java, Spring Framework. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse Minhas Redes:</h2>
                 <a class="apresentacao__links__botoes" href="https://instagram.com/lucascampos51">
@@ -31,11 +31,6 @@
                     <img src="./assets/linkedin.png" >
                     Linkedin
                 </a>
-                <a class="apresentacao__links__botoes"href="./assets/Curriculo-Lucas-Campos.pdf" download="Curriculo-Lucas-Campos">
-                    <img src="./assets/curriculum-vitae 1.png" >
-                    Curriculo
-                </a>
-               
             </div>    
         </section>
         <img class="apresentacao__foto" src="./assets/Lucinhas.png" alt="Foto do Programador Lucas Campos">
