--- a/about.html
+++ b/about.html
@@ -33,6 +33,18 @@
                 <img src="./assets/curriculum-vitae 1.png" alt="Currículo">
                 Meu Currículo
             </a>
+            <a class="apresentacao__links__botoes" href="https://xumas.netlify.app/" >
+                <img src="./assets/pokemonicon.png" alt="Portifolio">
+                Portifolio 1
+            </a>
+            <a class="apresentacao__links__botoes" href="https://gamersecretnumber-three.vercel.app">
+                <img src="./assets/game.png" alt="Portifolio">
+                Portifolio 2
+            </a>
+            <a class="apresentacao__links__botoes" href="https://xumackr.github.io/xumackr/">
+                <img src="./assets/project.png" alt="Portifolio">
+                Portifolio Incompleto
+            </a>
         </div>    
     </main>
     <footer class="rodape">
