--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
             </a>
             <a class="apresentacao__links__botoes" href="https://xumackr.github.io/xumackr/">
                 <img src="./assets/project.png" alt="Portifolio">
-                Portifolio Incompleto
+                Incompletos
             </a>
         </div>    
     </main>
