--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
                     <img src="./assets/linkedin.png" >
                     Linkedin
                 </a>
+                <a class="apresentacao__links__botoes"href="https://api.whatsapp.com/send?phone=5521966496084">
+                    <img src="./assets/whatsapp.png" >
+                    Whatsapp
+                </a>
             </div>    
         </section>
         <img class="apresentacao__foto" src="./assets/Lucinhas.png" alt="Foto do Programador Lucas Campos">
