--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
             <strong class="titulo-destaque">Estou em busca de oportunidades na área de TI,</strong> ansioso para aplicar os conhecimentos adquiridos e contribuir de forma significativa em um ambiente profissional. Agradeço pela oportunidade de compartilhar um pouco da minha história com vocês.</p>
         </section>
         <div class="apresentacao__links">
-            <img class="apresentacao__foto" src="./assets/lukitos.png" alt="">
+            <img class="apresentacao__foto" src="./assets/lukitos.jpg" alt="">
             <a class="apresentacao__links__botoes" href="./assets/Curriculo-Lucas-Campos.pdf" download="Curriculo-Lucas-Campos">
                 <img src="./assets/curriculum-vitae 1.png" alt="Currículo">
                 Meu Currículo
