--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong class="titulo-destaque"> com um Front-end de qualidade!</strong></h1>
-            <p class="apresentacao__conteudo__paragrafo">Olá! Sou Lucas Campos, desenvolvedor Front-end com especialidade em JavaScript, HTML e CSS e Back-end com especialidade em Java, Spring Framework. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+            <p class="apresentacao__conteudo__paragrafo">Olá! <strong class="titulo-destaque">Sou Lucas Campos,</strong> desenvolvedor Front-end com especialidade em <strong class="titulo-destaque">JavaScript, HTML e CSS e Back-end com especialidade em Java, Spring Framework.</strong> Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse Minhas Redes:</h2>
                 <a class="apresentacao__links__botoes" href="https://instagram.com/lucascampos51">
@@ -31,7 +31,7 @@
                     <img src="./assets/linkedin.png" >
                     Linkedin
                 </a>
-                <a class="apresentacao__links__botoes"href="https://api.whatsapp.com/send?phone=5521966496084">
+                <a class="apresentacao__links__botoes"href="https://api.whatsapp.com/send?phone=5521920076580">
                     <img src="./assets/whatsapp.png" >
                     Whatsapp
                 </a>
