--- a/about.html
+++ b/about.html
@@ -29,10 +29,10 @@
         </section>
         <div class="apresentacao__links">
             <img class="apresentacao__foto" src="./assets/lukitos.jpg" alt="">
-            <a class="apresentacao__links__botoes" href="./assets/Curriculo-Lucas-Campos.pdf" download="Curriculo-Lucas-Campos">
+           <!-- <a class="apresentacao__links__botoes" href="./assets/Curriculo-Lucas-Campos.pdf" download="Curriculo-Lucas-Campos">
                 <img src="./assets/curriculum-vitae 1.png" alt="Currículo">
                 Meu Currículo
-            </a>
+            </a>-->
             <a class="apresentacao__links__botoes" href="https://xumas.netlify.app/" >
                 <img src="./assets/pokemonicon.png" alt="Portifolio">
                 Portifolio 1
