--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
         <nav class="cabecalho__menu">
             <a class="cabecalho__menu__link" href="index.html">Home</a>
             <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
-            <a class="cabecalho__menu__link" href="#">Formação</a>
+            <a class="cabecalho__menu__link" href="formacao.html">Formação</a>
         </nav>
     </header>    
     <main class="apresentacao">
