--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav class="cabecalho__menu">
             <a class="cabecalho__menu__link" href="index.html">Home</a>
             <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
-            <a class="cabecalho__menu__link" href="#">Formação</a>
+            <a class="cabecalho__menu__link" href="formacao.html">Formação</a>
         </nav>
     </header>
     <main class="apresentacao">
@@ -32,7 +32,7 @@
                     <img src="./assets/linkedin.png" >
                     Linkedin
                 </a>
-                <a class="apresentacao__links__botoes"href="https://api.whatsapp.com/send?phone=5521920076580">
+                <a class="apresentacao__links__botoes"href="https://api.whatsapp.com/send?phone=5521973646782">
                     <img src="./assets/whatsapp.png" >
                     Whatsapp
                 </a>
