--- a/about.html
+++ b/about.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre mim</title>
+    <title>Portifólio Pessoal - Lucas Campos</title>
     <link rel="stylesheet" href="./styles/style.css">
 </head>
+
+<!--Lucas Campos dos santos (RU:4461530)-->
+
 <body>
     <header class="cabecalho">
         <nav class="cabecalho__menu">
@@ -29,7 +32,7 @@
             <strong class="titulo-destaque">Estou em busca de oportunidades na área de TI,</strong> ansioso para aplicar os conhecimentos adquiridos e contribuir de forma significativa em um ambiente profissional. Agradeço pela oportunidade de compartilhar um pouco da minha história com vocês.</p>
         </section>
         <div class="apresentacao__links">
-            <img class="apresentacao__foto" src="./assets/lukitos.jpg" alt="">
+            <img style="border-radius: 50%;" class="apresentacao__foto" src="./assets/lukitos2.jpg" alt="">
            <!-- <a class="apresentacao__links__botoes" href="./assets/Curriculo-Lucas-Campos.pdf" download="Curriculo-Lucas-Campos">
                 <img src="./assets/curriculum-vitae 1.png" alt="Currículo">
                 Meu Currículo
