--- a/formacao.html
+++ b/formacao.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre mim</title>
+    <title>Portifólio Pessoal - Lucas Campos</title>
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
@@ -15,21 +15,17 @@
         </nav>
     </header>    
     <main class="apresentacao">
-        <section class="apresentacao__conteudo">
-            <h1 class="apresentacao__conteudo__titulo">Um Pouco Sobre Mim:</h1>
-            <p class="apresentacao__conteudo__paragrafo">
-            <strong class="titulo-destaque">Sou Flamenguista, Apaixonado pelo aprendizado</strong> Sempre gostei de mexer no computador sempre tive
-            curiosidade sobre os assuntos de TI, Desde de pequeno ja mexia com ferramentas hacker, apaixonado por Cibersegurity</p>
-            <p class="apresentacao__conteudo__paragrafo">Olá a todos, meu nome é Lucas Campos Dos Santos. Durante cinco anos, <strong class="titulo-destaque">servi orgulhosamente nas Forças Armadas como fuzileiro naval.</strong> Essa experiência me proporcionou valiosas lições de disciplina, trabalho em equipe e resiliência.</p>
-            <p class="apresentacao__conteudo__paragrafo">Ainda antes de ingressar na Marinha, já nutria uma paixão pela Tecnologia da Informação. <strong class="titulo-destaque">Cursei o ensino técnico em informática e realizei diversos cursos na área.</strong> Essa paixão é o que me motiva e orienta minha carreira profissional.</p>
-            <p class="apresentacao__conteudo__paragrafo">Durante o período em que cursei o técnico em informática,<strong class="titulo-destaque">tive a oportunidade de estagiar no laboratório de informática do polo da Faculdade Anhanguera em Itaguaí.</strong> Essa experiência prática foi fundamental para aprimorar minhas habilidades técnicas e ganhar experiência no ambiente profissional de TI. Trabalhar no laboratório me proporcionou insights valiosos sobre o funcionamento prático dos sistemas de computadores e redes, além de fortalecer meu interesse e determinação em seguir uma carreira na área de Tecnologia da Informação.</p>
-            <p class="apresentacao__conteudo__paragrafo">Além da TI, o esporte sempre teve um papel importante em minha vida.Fui federado em um clube de futebol.<strong class="titulo-destaque">O esporte me ensinou valores como dedicação e trabalho em equipe, além de proporcionar momentos inesquecíveis.</strong></p>
-            <p class="apresentacao__conteudo__paragrafo">Atualmente,<strong class="titulo-destaque">sou pai de três filhos maravilhosos,</strong>que são minha fonte de inspiração e motivação para alcançar meus objetivos pessoais e profissionais.</p>
-            <p class="apresentacao__conteudo__paragrafo">
-            <strong class="titulo-destaque">Estou em busca de oportunidades na área de TI,</strong> ansioso para aplicar os conhecimentos adquiridos e contribuir de forma significativa em um ambiente profissional. Agradeço pela oportunidade de compartilhar um pouco da minha história com vocês.</p>
+        <section class="apresentacao__conteudo" style="border: solid rgb(255, 98, 98), 1px; border-radius: 20px; padding: 2%;">
+            <h1 class="apresentacao__conteudo__titulo">Minhas Formaçoes:</h1>
+            <p class="apresentacao__conteudo__paragrafo_formacao">
+            <strong class="titulo-destaque">Graduação - Análise e Desenvolvimento de Sistemas </strong>Atualmente Cursando 2º Período novamente devido a troca de instituição</p>
+            <p class="apresentacao__conteudo__paragrafo_formacao">Olá a todos, meu nome é Lucas Campos Dos Santos. Durante cinco anos, <strong class="titulo-destaque">servi orgulhosamente nas Forças Armadas como fuzileiro naval.</strong> Essa experiência me proporcionou valiosas lições de disciplina, trabalho em equipe e resiliência.</p>
+            <p class="apresentacao__conteudo__paragrafo_formacao"><strong class="titulo-destaque">Curso</strong> montagem e manutenção de computadores e Redes e software na instituição microlins </p>
+            <p class="apresentacao__conteudo__paragrafo_formacao"><strong class="titulo-destaque">Curso Técnico em Informática</strong> cursei 2/3 anos de técnico em informática </p>
+            <p class="apresentacao__conteudo__paragrafo_formacao"><strong class="titulo-destaque">Curso java completo</strong> Atualmente me especializo em java, durante 2 anos ja estudo a linguagem java para web </p>
         </section>
         <div class="apresentacao__links">
-            <img class="apresentacao__foto" src="./assets/lukitos.jpg" alt="">
+            <img style="width: 120%;" class="apresentacao__foto" src="./assets/lukitos.jpg" alt="">
            <!-- <a class="apresentacao__links__botoes" href="./assets/Curriculo-Lucas-Campos.pdf" download="Curriculo-Lucas-Campos">
                 <img src="./assets/curriculum-vitae 1.png" alt="Currículo">
                 Meu Currículo
