--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portifolio</title>
+    <title>Portifólio Pessoal - Lucas Campos</title>
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
@@ -19,7 +19,7 @@
             <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong class="titulo-destaque"> com um Front-end de qualidade!</strong></h1>
             <p class="apresentacao__conteudo__paragrafo">Olá! <strong class="titulo-destaque">Sou Lucas Campos,</strong> desenvolvedor Front-end com especialidade em <strong class="titulo-destaque">JavaScript, HTML e CSS e Back-end com especialidade em Java, Spring Framework.</strong> Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
             <div class="apresentacao__links">
-                <h2 class="apresentacao__links__subtitulo">Acesse Minhas Redes:</h2>
+                <h2 class="apresentacao__links__subtitulo">Entre em contato!</h2>
                 <a class="apresentacao__links__botoes" href="https://instagram.com/lucascampos51">
                     <img src="./assets/instagram.png"> 
                     Instagram
