--- a/formacao.html
+++ b/formacao.html
@@ -25,7 +25,7 @@
             <p class="apresentacao__conteudo__paragrafo_formacao"><strong class="titulo-destaque">Curso java completo</strong> Atualmente me especializo em java, durante 2 anos ja estudo a linguagem java para web </p>
         </section>
         <div class="apresentacao__links">
-            <img style="width: 120%;" class="apresentacao__foto" src="./assets/lukitos.jpg" alt="">
+            <img class="apresentacao__foto" src="./assets/lukitos.jpg" alt="">
            <!-- <a class="apresentacao__links__botoes" href="./assets/Curriculo-Lucas-Campos.pdf" download="Curriculo-Lucas-Campos">
                 <img src="./assets/curriculum-vitae 1.png" alt="Currículo">
                 Meu Currículo
