--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
             <strong class="titulo-destaque">Estou em busca de oportunidades na área de TI,</strong> ansioso para aplicar os conhecimentos adquiridos e contribuir de forma significativa em um ambiente profissional. Agradeço pela oportunidade de compartilhar um pouco da minha história com vocês.</p>
         </section>
         <div class="apresentacao__links">
-            <img style="border-radius: 50%;" class="apresentacao__foto" src="./assets/lukitos2.jpg" alt="">
+            <img style="border-radius: 20% 30%;" class="apresentacao__foto" src="./assets/lukitos2.jpg" alt="">
            <!-- <a class="apresentacao__links__botoes" href="./assets/Curriculo-Lucas-Campos.pdf" download="Curriculo-Lucas-Campos">
                 <img src="./assets/curriculum-vitae 1.png" alt="Currículo">
                 Meu Currículo
