--- a/formacao.html
+++ b/formacao.html
@@ -18,7 +18,7 @@
         <section class="apresentacao__conteudo" style="border: solid rgb(255, 98, 98), 1px; border-radius: 20px; padding: 2%;">
             <h1 class="apresentacao__conteudo__titulo">Minhas Formaçoes:</h1>
             <p class="apresentacao__conteudo__paragrafo_formacao">
-            <strong class="titulo-destaque">Bacharelado - Engenharia de computação </strong>Atualmente Cursando 1º Período Transfêrido com aproveitamento das disciplinas ja cursadas</p>
+            <strong class="titulo-destaque">Bacharelado - Engenharia de computação </strong>Atualmente Cursando 1º Período Transferido com aproveitamento das disciplinas ja cursadas</p>
             <p class="apresentacao__conteudo__paragrafo_formacao">Olá a todos, meu nome é Lucas Campos Dos Santos. Durante cinco anos, <strong class="titulo-destaque">servi orgulhosamente nas Forças Armadas como fuzileiro naval.</strong> Essa experiência me proporcionou valiosas lições de disciplina, trabalho em equipe e resiliência.</p>
             <p class="apresentacao__conteudo__paragrafo_formacao"><strong class="titulo-destaque">Curso</strong> montagem e manutenção de computadores e Redes e software na instituição microlins </p>
             <p class="apresentacao__conteudo__paragrafo_formacao"><strong class="titulo-destaque">Curso Técnico em Informática</strong> cursei 2/3 anos de técnico em informática </p>
