--- a/formacao.html
+++ b/formacao.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifólio Pessoal - Lucas Campos</title>
     <link rel="stylesheet" href="./styles/style.css">
+    <style>
+    .apresentacao__links .apresentacao__foto:hover {
+      transform: scale(1.05);
+      box-shadow: 0 4px 8px white;
+      transition: all 0.3s ease-in-out;
+    }
+  </style>
 </head>
 <body>
     <header class="cabecalho">
