--- a/formacao.html
+++ b/formacao.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="./styles/style.css">
     <style>
     .apresentacao__links .apresentacao__foto:hover {
-      transform: scale(1.10);
-      box-shadow: 1 2px 2px white;
+      transform: scale(1.7);
+      box-shadow: 0 2px 2px grey;
       transition: all 0.5s ease-in-out;
     }
   </style>
