--- a/formacao.html
+++ b/formacao.html
@@ -32,7 +32,7 @@
             <p class="apresentacao__conteudo__paragrafo_formacao"><strong class="titulo-destaque">Curso java completo</strong> Atualmente me especializo em java, durante 2 anos ja estudo a linguagem java para web </p>
         </section>
         <div class="apresentacao__links">
-            <a class="apresentacao__foto" href="Docs/Meu_curriculo_Principal.pdf"><img class="apresentacao__foto" src="./assets/lukitos.jpg" alt=""></a>
+            <a class="apresentacao__foto" href="Docs/Meu_curriculo_Principal.pdf" target="_blank"><img class="apresentacao__foto" src="./assets/lukitos.jpg" alt=""></a>
            <!-- <a class="apresentacao__links__botoes" href="./assets/Curriculo-Lucas-Campos.pdf" download="Curriculo-Lucas-Campos">
                 <img src="./assets/curriculum-vitae 1.png" alt="Currículo">
                 Meu Currículo
