--- a/formacao.html
+++ b/formacao.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="./styles/style.css">
     <style>
     .apresentacao__links .apresentacao__foto:hover {
-      transform: scale(1.05);
-      box-shadow: 0 2px 2px grey;
-      transition: all 0.5s ease-in-out;
+        box-sizing: border-box;
+        transform: scale(1.05);
+        box-shadow: 0 2px 2px grey;
+        transition: all 0.5s ease-in-out;
     }
   </style>
 </head>
