--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <img src="./assets/instagram.png"> 
                     Instagram
                 </a>
-                <a class="apresentacao__links__botoes"href="https://github.com/xumackr">
+                <a class="apresentacao__links__botoes"href="https://github.com/Xumackrj">
                     <img src="./assets/github.png" >
                     Github
                 </a>
@@ -45,3 +45,4 @@
     </footer>
 </body>
 </html>
+
